@@ -531,6 +531,20 @@ int main(
 
           exit(0);
           }
+        else if (!strcmp(optarg,"about"))
+          {
+	  printf("package: %s\n",PACKAGE_STRING);
+	  printf("sourcedir %s\n",PBS_SOURCE_DIR);
+	  printf("configure: %s\n",PBS_CONFIG_ARGS);
+	  printf("buildcflags: %s\n",PBS_CFLAGS);
+	  printf("buildhost: %s\n",PBS_BUILD_HOST);
+	  printf("builddate: %s\n",PBS_BUILD_DATE);
+	  printf("buildir: %s\n",PBS_BUILD_DIR);
+	  printf("builduser: %s\n",PBS_BUILD_USER);
+	  printf("installdir: %s\n",PBS_INSTALL_DIR);
+	  printf("serverhome: %s\n",PBS_SERVER_HOME);
+          exit(0);
+          }
         else if (!strcmp(optarg,"help"))
           {
           PBSShowUsage(NULL);
