@@ -18,6 +18,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - build process sets default submit filter path to ${libexecdir}/qsub_filter
       we fall back to /usr/local/sbin/torque_submitfilter to maintain compatibility
   e - allow long job names when not using -N
+  e - pbs_server will now print build details with --about
 
 2.1.2
 
